# horizon-copilotkit

./: .gitignore  package-lock.json  package.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md
CopilotKit/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
CopilotKit/examples/debug-example/: LANGGRAPH_SETUP.md  start-debug.sh  start-deepseek.sh
CopilotKit/examples/debug-example/langgraph-server/: README.md  pyproject.toml
CopilotKit/examples/debug-example/langgraph-server/debug_langgraph/: __init__.py  human_in_the_loop_agent.py  server.py
copilot-chat/: README.md  package-lock.json  package.json
copilot-chat/backend/: env.example  server.py
copilot-chat/frontend/: package.json  playwright.config.js  pnpm-lock.yaml  vite.config.ts
debug-example/: README.md  diagnose-issue.md  package-lock.json  package.json  test-action-direct.js  test-fix.md  test-streaming.js
debug-example-next/: QUICK_START.md  README.md  SETUP_COMPLETE.md  package-lock.json  package.json
debug-example-next/backend/: DEBUG_GUIDE.md  README_APPROVAL_INTEGRATION.md  approval_dashboard.html  approval_dashboard_integrated.html  requirements.txt  server.py  server_integrated.py  server_py.py  test_approval_system.py  test_runtime_py.py
debug-example-next/frontend/: package.json  tsconfig.json  vite.config.ts
debug-example-py/: manual-test.md
debug-example-py/backend/: tsconfig.json
debug-example-py/frontend/: package.json
debug-example/frontend/: index.html  vite.config.ts
e2e/: test-1.spec.ts
(+34 files in other folders)
